@@ -1,3 +1,10 @@
+2006-07-10  Rodney Dawes  <dobey@novell.com>
+
+	* 48x48/apps/Makefile.am: Update to use the same variables as other
+	sizes, so that the install-data-local mapping rule will work
+
+	Fixes #347083
+
 2006-07-09  Rodney Dawes  <dobey@novell.com>
 
 	* */apps/accessibility-directory.*:
